Add home component

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nguniversal/module-map-ngfactory-loader": "0.0.0",
     "core-js": "^2.5.4",
     "express": "^4.15.2",
+    "flexboxgrid-sass": "8.0.5",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
